# gpubroker

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_SETUP.md  Dockerfile  GPUBROKER_RECONCEPTUALIZATION_PLAN.md  PRODUCTION_READY_REPORT.md  README.md  ROADMAP.md  SPRINT1_CHECKLIST.md  SPRONTED_ROADMAP.md  Tiltfile  UI_UX_MOCKUPS.md  UI_UX_SPECIFICATIONS.md  VIBE_CODING_RULES_VIOLATIONS_REPORT.md  VIOLATIONS_FIXED_SUMMARY.md  docker-compose.dev.yml  docker-compose.local-prod.yml  docker-compose.yml  pyproject.toml  rules.md  start-dev.sh  start-local-prod.sh  test_docker_deployment.py  vibe_coding_rules.md  violations.md
backend/: README.md
docs/: AGENT_CONTINUITY.md  ENVIRONMENT-VARIABLES.md  PROVIDER_API_KEYS_LINKS.md  REQUIRED_PROVIDER_CREDENTIALS.md  SRS-Django5.md  SRS-MODE-MANAGEMENT.md  SRS-Provider-API-Gateway.md  SRS.md  integration_contracts.md  observability.md  openapi.yaml  provider_alibaba.md  provider_azureml.md  provider_cerebras.md  provider_coreweave.md  provider_deepinfra.md  provider_exafunction.md  provider_groq.md  provider_huggingface.md  provider_ibm_watson.md  provider_integration.md  provider_kaggle.md  provider_lambdalabs.md  provider_nvidia_dgx.md  provider_oracle_oci.md  provider_paperspace.md  provider_replicate.md  provider_runai.md  provider_runpod.md  provider_sagemaker.md  provider_scaleai.md  provider_spell.md  provider_tencent.md  provider_vastai.md  provider_vertexai.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  (+1 more)
(+920 files in other folders)
